@@ -61,6 +61,19 @@ import|;
 end_import
 begin_import
 import|import
+name|com
+operator|.
+name|google
+operator|.
+name|common
+operator|.
+name|collect
+operator|.
+name|ImmutableSet
+import|;
+end_import
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -213,6 +226,31 @@ name|invariants
 decl_stmt|,
 name|appends
 decl_stmt|;
+DECL|field|pluginInfo
+specifier|private
+name|PluginInfo
+name|pluginInfo
+decl_stmt|;
+DECL|field|KNOWN_KEYS
+specifier|private
+specifier|final
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|KNOWN_KEYS
+init|=
+name|ImmutableSet
+operator|.
+name|of
+argument_list|(
+name|DEFAULTS
+argument_list|,
+name|INVARIANTS
+argument_list|,
+name|APPENDS
+argument_list|)
+decl_stmt|;
 DECL|method|InitParams
 specifier|public
 name|InitParams
@@ -221,6 +259,12 @@ name|PluginInfo
 name|p
 parameter_list|)
 block|{
+name|this
+operator|.
+name|pluginInfo
+operator|=
+name|p
+expr_stmt|;
 name|this
 operator|.
 name|name
@@ -733,6 +777,98 @@ argument_list|,
 literal|true
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|pluginInfo
+operator|.
+name|initArgs
+operator|!=
+literal|null
+condition|)
+block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|pluginInfo
+operator|.
+name|initArgs
+operator|.
+name|size
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|String
+name|name
+init|=
+name|pluginInfo
+operator|.
+name|initArgs
+operator|.
+name|getName
+argument_list|(
+name|i
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|KNOWN_KEYS
+operator|.
+name|contains
+argument_list|(
+name|name
+argument_list|)
+condition|)
+continue|continue;
+comment|//aready taken care of
+name|Object
+name|val
+init|=
+name|info
+operator|.
+name|initArgs
+operator|.
+name|get
+argument_list|(
+name|name
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|val
+operator|!=
+literal|null
+condition|)
+continue|continue;
+comment|//this is explicitly specified in the reqhandler , ignore
+name|info
+operator|.
+name|initArgs
+operator|.
+name|add
+argument_list|(
+name|name
+argument_list|,
+name|pluginInfo
+operator|.
+name|initArgs
+operator|.
+name|getVal
+argument_list|(
+name|i
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 DECL|method|merge
 specifier|private
