@@ -834,6 +834,75 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testArbitraryAttributes
+specifier|public
+name|void
+name|testArbitraryAttributes
+parameter_list|()
+block|{
+name|SolrRequestHandler
+name|handler
+init|=
+name|h
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|getRequestHandler
+argument_list|(
+literal|"/dump7"
+argument_list|)
+decl_stmt|;
+name|SolrQueryResponse
+name|rsp
+init|=
+operator|new
+name|SolrQueryResponse
+argument_list|()
+decl_stmt|;
+name|handler
+operator|.
+name|handleRequest
+argument_list|(
+name|req
+argument_list|(
+literal|"initArgs"
+argument_list|,
+literal|"true"
+argument_list|)
+argument_list|,
+name|rsp
+argument_list|)
+expr_stmt|;
+name|NamedList
+name|nl
+init|=
+operator|(
+name|NamedList
+operator|)
+name|rsp
+operator|.
+name|getValues
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"initArgs"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"server-enabled.txt"
+argument_list|,
+name|nl
+operator|.
+name|get
+argument_list|(
+literal|"healthcheckFile"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testMatchPath
 specifier|public
 name|void
